corrected directories and allowed for posixpaths in params

--- a/ITAN_Strain_RNN_Classification.ipynb
+++ b/ITAN_Strain_RNN_Classification.ipynb
@@ -2,14 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from env import data_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PyTorch Version:  1.1.0\n",
+      "PyTorch Version:  1.2.0\n",
       "Setup complete!\n"
      ]
     }
@@ -75,17 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "params = utils.Params(\n",
     "    {\n",
     "        \"output_type\": \"classification\",  # Classification vs Regression\n",
-    "        \"project_dir\": f\"{Path.home()}/code/itan-nn\",  # Top-level path for this project\n",
-    "        \"data_dir\": f\"{Path.home()}/data/itan\",  # Relative data path\n",
-    "        \"cohort_file\": \"itan_cohort_v.h5\",  # File path to the cohort dataset (hdf5)\n",
-    "        \"sample_dir\": \"Data/itan_hourly_encounter_splits\",  # Directory to the split patient hourly data\n",
+    "        \"project_dir\": Path.home()/'code'/'itan-nn',  # Top-level path for this project\n",
+    "        \"data_dir\": data_dir,  # Relative data path\n",
+    "        \"cohort_file\": data_dir/\"cohort.h5\",  # File path to the cohort dataset (hdf5)\n",
+    "        \"sample_dir\": data_dir/'encounter_splits',  # Directory to the split patient hourly data\n",
     "        \"label\": \"LOS\",  # Column name of target/label in cohort dataframe\n",
     "        \"cohort_features\": [\"ADM_LAPS2\", \"ADM_COPS2\", \"SEX\", \"AGE\"],  # Which cohort-level features to use\n",
     "#         \"hourly_features\": [\"LAPS2\"],#, \"IMAR_IM_GROUP\"],  # Which patient hourly features to use\n",
@@ -115,8 +124,8 @@
     "        \"learning_rate\": 0.01,  # optimizer learning rate\n",
     "        \"dropout_prob\": 0.0,  # dropout regularization probability (0 for not implemented)\n",
     "        \"cross_validation_ratios\": {\"train\": 0.8, \"val\": 0.1, \"test\": 0.1},  # Fraction of data in each CV split\n",
-    "        \"split_file\": \"set_splits_1000.json\",  # Where to save the CV splits\n",
-    "        \"subset\": 0,  # train/evaluate on a smaller subset of the data for testing purposes, reduced runtime\n",
+    "        \"split_file\": data_dir/\"set_splits_1000.json\",  # Where to save the CV splits\n",
+    "        \"subset\": 100,  # train/evaluate on a smaller subset of the data for testing purposes, reduced runtime\n",
     "        \"torch_random_seed\": 7532941,  # RNG seed for PyTorch (weight initialization and dataset shuffling per-epoch)\n",
     "        \"numpy_random_seed\": 7532941,  # RNG seed for NumPy (randomly selecting among associated occupants at each hour)\n",
     "        \"normalize_cohort\": True,  # Whether to normalize the cohort features (mean 0, std 1)\n",
@@ -127,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +149,7 @@
       " 'association_history': 0,\n",
       " 'batch_size': 10,\n",
       " 'cohort_features': ['ADM_LAPS2', 'ADM_COPS2', 'SEX', 'AGE'],\n",
-      " 'cohort_file': 'itan_cohort_v.h5',\n",
+      " 'cohort_file': '/home/jovyan/data/itan/cohort.h5',\n",
       " 'cross_validation_ratios': {'test': 0.1, 'train': 0.8, 'val': 0.1},\n",
       " 'data_dir': '/home/jovyan/data/itan',\n",
       " 'dropout_prob': 0.0,\n",
@@ -177,9 +186,9 @@
       " 'predict_after_hours': 0,\n",
       " 'predict_remaining_LoS': True,\n",
       " 'project_dir': '/home/jovyan/code/itan-nn',\n",
-      " 'sample_dir': 'Data/itan_hourly_encounter_splits',\n",
-      " 'split_file': 'set_splits_1000.json',\n",
-      " 'subset': 0,\n",
+      " 'sample_dir': '/home/jovyan/data/itan/encounter_splits',\n",
+      " 'split_file': '/home/jovyan/data/itan/set_splits_1000.json',\n",
+      " 'subset': 100,\n",
       " 'torch_random_seed': 7532941,\n",
       " 'unit_hourly_hidden_size1': 64,\n",
       " 'unit_hourly_hidden_size2': 128}\n",
@@ -198,6 +207,111 @@
     "params.save(os.path.join(model_dir, 'params.json'))\n",
     "logging.info(\"Parameters:\\n{}\".format(pformat(params.__dict__)))\n",
     "logging.info(\"Parameters set and saved to file\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "File /home/jovyan/data/itan/itan_cohort_v.h5 does not exist",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-254498b252ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m cohort_df = pd.read_hdf(os.path.join(params.project_dir, params.data_dir, params.cohort_file),\n\u001b[1;32m      3\u001b[0m                                       \u001b[0mstart\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m                                       stop=-1)\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mcohort_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m':'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcohort_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# clean sim/src headers for fuzzed dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/pandas/io/pytables.py\u001b[0m in \u001b[0;36mread_hdf\u001b[0;34m(path_or_buf, key, mode, **kwargs)\u001b[0m\n\u001b[1;32m    369\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mexists\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    370\u001b[0m             raise compat.FileNotFoundError(\n\u001b[0;32m--> 371\u001b[0;31m                 'File %s does not exist' % path_or_buf)\n\u001b[0m\u001b[1;32m    372\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    373\u001b[0m         \u001b[0mstore\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mHDFStore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_or_buf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: File /home/jovyan/data/itan/itan_cohort_v.h5 does not exist"
+     ]
+    }
+   ],
+   "source": [
+    "# Load sample IDs and set up dataset\n",
+    "cohort_df = pd.read_hdf(os.path.join(params.project_dir, params.data_dir, params.cohort_file),\n",
+    "                                      start=0, \n",
+    "                                      stop=-1)\n",
+    "cohort_df.columns = [c.split(':')[1] for c in cohort_df.columns] # clean sim/src headers for fuzzed dataset\n",
+    "\n",
+    "# Check CV Parameters\n",
+    "assert (sum([params.cross_validation_ratios[split] for split in params.cross_validation_ratios.keys()]) == 1), \"Cross validation splits must sum to 1:\\n{}\".format(params.cross_validation_ratios)\n",
+    "\n",
+    "# Split separately for each facility\n",
+    "all_facilities = list(cohort_df[\"FAC_ID\"].unique())\n",
+    "all_facilities.sort()\n",
+    "cohort_df[\"CV_FAC_SPLIT\"] = 'none'\n",
+    "with tqdm(total=len(all_facilities), desc=\"Facilities\") as t:\n",
+    "    for facility in all_facilities:\n",
+    "        logging.debug(\"Splitting patients for facility {}\".format(facility))\n",
+    "        facility_df = cohort_df.loc[cohort_df[\"FAC_ID\"] == facility, :]\n",
+    "\n",
+    "        # Split indices for appropriate number/ratio of patients (not days) per split\n",
+    "        N_patients = len(facility_df)\n",
+    "        train_split_index = math.floor(N_patients * params.cross_validation_ratios[\"train\"])\n",
+    "        val_split_index = train_split_index + math.floor(N_patients * params.cross_validation_ratios[\"val\"])\n",
+    "\n",
+    "        # Sort by admit date and find boundaries\n",
+    "        facility_df = facility_df.sort_values([\"ADM_DATE\"]).reset_index(col_fill='cohort_index')\n",
+    "        start_date = facility_df.loc[0, \"ADM_DATE\"]\n",
+    "        end_date = facility_df.loc[N_patients-1, \"ADM_DATE\"]\n",
+    "        train_boundary_date = facility_df.loc[train_split_index, \"ADM_DATE\"]\n",
+    "        val_boundary_date = facility_df.loc[val_split_index, \"ADM_DATE\"]\n",
+    "\n",
+    "\n",
+    "        # Assign to cross-validation splits\n",
+    "        cohort_df.loc[((cohort_df[\"FAC_ID\"] == facility) &\n",
+    "                       (cohort_df[\"DISCH_DATE\"] < train_boundary_date)), \"CV_FAC_SPLIT\"] = 'train'\n",
+    "        cohort_df.loc[((cohort_df[\"FAC_ID\"] == facility) &\n",
+    "                       (cohort_df[\"ADM_DATE\"] >= train_boundary_date) &\n",
+    "                       (cohort_df[\"DISCH_DATE\"] < val_boundary_date)), \"CV_FAC_SPLIT\"] = 'val'\n",
+    "        cohort_df.loc[((cohort_df[\"FAC_ID\"] == facility) &\n",
+    "                       (cohort_df[\"ADM_DATE\"] >= val_boundary_date)), \"CV_FAC_SPLIT\"] = 'test'\n",
+    "        t.update()\n",
+    "\n",
+    "logging.debug(\"\\nCross-validation split counts:\\n{}\\n\\nCross-validation split ratios:\\n{}\\n\".format(\n",
+    "    cohort_df[\"CV_FAC_SPLIT\"].value_counts(),\n",
+    "    cohort_df[\"CV_FAC_SPLIT\"].value_counts() / len(cohort_df)))\n",
+    "\n",
+    "\n",
+    "# Restrict to samples with hourly data available\n",
+    "hourly_sample_ids = [np.int64(f.split('.')[0].split('_')[-1])\n",
+    "                     for f in os.listdir(os.path.join(params.project_dir, params.sample_dir))\n",
+    "                     if f.endswith('.h5')]\n",
+    "logging.debug(\"Loaded {} hourly sample IDs:\\n{}\".format(len(hourly_sample_ids), hourly_sample_ids[:3]))\n",
+    "cohort_df = cohort_df.loc[cohort_df[\"ENCOUNTER_ID\"].astype(np.int64).isin(hourly_sample_ids), :]\n",
+    "logging.debug(\"{} samples remaining after dropping samples which don't have hourly data\\n\".format(len(cohort_df)))\n",
+    "\n",
+    "# Subset to a single facility\n",
+    "if params.subset_facility is not None:\n",
+    "    cohort_df = cohort_df.loc[(cohort_df[\"FAC_ID\"] == params.subset_facility), :]\n",
+    "    logging.info(\"Subsetted to {} samples in facility {} only\".format(len(cohort_df), params.subset_facility))\n",
+    "\n",
+    "# Split to lists of integers for constructing Skorch datasets\n",
+    "cv_split_samples = {}\n",
+    "for split in [\"train\", \"val\", \"test\"]:\n",
+    "    logging.info(\"Building {} split sample IDs\".format(split))\n",
+    "    \n",
+    "    # Select the matching cohort encount IDs\n",
+    "    samples_df = cohort_df.loc[(cohort_df[\"CV_FAC_SPLIT\"] == split), [\"ADM_DATE\", \"ENCOUNTER_ID\"]]\n",
+    "    \n",
+    "    # Sort chronologically to maximize concurrency on subset\n",
+    "    samples_df.sort_values(by=\"ADM_DATE\", ascending=True, inplace=True)\n",
+    "    logging.info(\"Sorted samples:\\n{}\".format(samples_df[:10]))\n",
+    "    \n",
+    "    # Format as integers for size/index speed\n",
+    "    cv_split_samples[split] = list(samples_df[\"ENCOUNTER_ID\"].astype(np.int64).reset_index(drop=True))\n",
+    "    \n",
+    "    # Select a smaller subset of each split for quick code testing\n",
+    "    if params.subset > 0:\n",
+    "        cv_split_samples[split] = cv_split_samples[split][:params.subset]\n",
+    "    logging.info(\"{} split:  {} samples\".format(split, len(cv_split_samples[split])))\n",
+    "\n",
+    "\n",
+    "# Save CV splits to file (for easier reload if using subsets, alternate datasets on different machines, etc.)\n",
+    "logging.info(f\"Saving set splits to {params.split_file}\")\n",
+    "with open(params.split_file, 'w') as f:\n",
+    "    json.dump(cv_split_samples, f, indent=4)"
    ]
   },
   {
@@ -264,7 +378,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -2870,5 +2987,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
