--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -27,7 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlalchemy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,6 +53,50 @@
     "    from doretl.ITAN_PATIENT_HOURLY_V\n",
     "    where rownum<10000\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = rdb.execute(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "Fetch all rows, just like DB-API ``cursor.fetchall()``.\n",
+       "\n",
+       "After all rows have been exhausted, the underlying DBAPI\n",
+       "cursor resource is released, and the object may be safely\n",
+       "discarded.\n",
+       "\n",
+       "Subsequent calls to :meth:`.ResultProxy.fetchall` will return\n",
+       "an empty list.   After the :meth:`.ResultProxy.close` method is\n",
+       "called, the method will raise :class:`.ResourceClosedError`.\n",
+       "\n",
+       ".. versionchanged:: 1.0.0 - Added \"soft close\" behavior which\n",
+       "   allows the result to be used in an \"exhausted\" state prior to\n",
+       "   calling the :meth:`.ResultProxy.close` method.\n",
+       "\u001b[0;31mFile:\u001b[0m      /opt/conda/lib/python3.6/site-packages/sqlalchemy/engine/result.py\n",
+       "\u001b[0;31mType:\u001b[0m      method\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "?result.fetchall"
    ]
   },
   {
