played with notebook

--- a/ITAN_Strain_RNN_Classification.ipynb
+++ b/ITAN_Strain_RNN_Classification.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,12 +58,6 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import *\n",
     "\n",
-    "# Basis Expansion (external package)\n",
-    "# from basis_expansions import (Binner, Polynomial, \n",
-    "#                               LinearSpline, CubicSpline,\n",
-    "#                               NaturalCubicSpline)\n",
-    "# from dftransformers import ColumnSelector, FeatureUnion, Intercept, MapFeature\n",
-    "\n",
     "# Deep Learning\n",
     "import torch\n",
     "print(\"PyTorch Version:  {}\".format(torch.__version__))\n",
@@ -97,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +133,7 @@
     "        \"dropout_prob\": 0.0,  # dropout regularization probability (0 for not implemented)\n",
     "        \"cross_validation_ratios\": {\"train\": 0.8, \"val\": 0.1, \"test\": 0.1},  # Fraction of data in each CV split\n",
     "        \"split_file\": data_dir/\"set_splits_1000.json\",  # Where to save the CV splits\n",
-    "        \"subset\": 100,  # train/evaluate on a smaller subset of the data for testing purposes, reduced runtime\n",
+    "        \"subset\": 1000,  # train/evaluate on a smaller subset of the data for testing purposes, reduced runtime\n",
     "        'subset_facility': None,\n",
     "        \"torch_random_seed\": 7532941,  # RNG seed for PyTorch (weight initialization and dataset shuffling per-epoch)\n",
     "        \"numpy_random_seed\": 7532941,  # RNG seed for NumPy (randomly selecting among associated occupants at each hour)\n",
@@ -151,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +198,7 @@
       " 'project_dir': '/home/jovyan/code/itan-nn',\n",
       " 'sample_dir': '/home/jovyan/data/itan/encounter_splits',\n",
       " 'split_file': '/home/jovyan/data/itan/set_splits_1000.json',\n",
-      " 'subset': 100,\n",
+      " 'subset': 1000,\n",
       " 'subset_facility': None,\n",
       " 'torch_random_seed': 7532941,\n",
       " 'unit_hourly_hidden_size1': 64,\n",
@@ -228,11 +222,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 91,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -290,7 +282,7 @@
       "486717  2015-11-01 00:00:00  316197799154\n",
       "486716  2015-11-01 00:00:00  316197798405\n",
       "486715  2015-11-01 00:00:00  316197797812\n",
-      "train split:  100 samples\n",
+      "train split:  1000 samples\n",
       "Building val split sample IDs\n",
       "Sorted samples:\n",
       "                   ADM_DATE  ENCOUNTER_ID\n",
@@ -304,7 +296,7 @@
       "192907  2017-12-11 00:00:00  318207164421\n",
       "294075  2017-12-11 00:00:00  318207166430\n",
       "125618  2017-12-11 00:00:00  318207166681\n",
-      "val split:  100 samples\n",
+      "val split:  1000 samples\n",
       "Building test split sample IDs\n",
       "Sorted samples:\n",
       "                   ADM_DATE  ENCOUNTER_ID\n",
@@ -318,7 +310,7 @@
       "249047  2018-03-14 00:00:00  314262789679\n",
       "249050  2018-03-14 00:00:00  314262815637\n",
       "282831  2018-03-14 00:00:00  314262798108\n",
-      "test split:  100 samples\n",
+      "test split:  1000 samples\n",
       "Saving set splits to /home/jovyan/data/itan/set_splits_1000.json\n"
      ]
     }
@@ -413,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -421,116 +413,116 @@
      "output_type": "stream",
      "text": [
       "Loaded CV splits from /home/jovyan/data/itan/set_splits_1000.json\n",
-      "train split:  100 samples\n",
-      "val split:  100 samples\n",
-      "test split:  100 samples\n",
+      "train split:  1000 samples\n",
+      "val split:  1000 samples\n",
+      "test split:  1000 samples\n",
       "Constructing Strain datasets for each cross-validation split.\n",
       "\n",
       "Building dataset for train split\n",
       "Pre-loading all cohort features\n",
-      "Loaded cohort data:  (100, 5)\n",
+      "Loaded cohort data:  (1000, 5)\n",
       "               LOS  ADM_LAPS2  ADM_COPS2 SEX  AGE\n",
       "ENCOUNTER_ID                                     \n",
-      "316197798405  1.09         96         22   M   84\n",
-      "316197799432  1.97         55         28   M   64\n",
+      "320116158464  4.07          5         10   F   39\n",
+      "320114862080  1.53         16         10   M   51\n",
+      "314206797825  0.51         46         11   M   47\n",
+      "312216213508  2.91         16          7   M   91\n",
       "318165946376  1.88         34        108   F   70\n",
-      "312216207370  2.09         89         49   M   89\n",
-      "312216204811  0.95         40          9   M   54\n",
       "Pre-loading all hourly features\n",
-      "Global time indices over 545 hours:  type <class 'pandas.core.indexes.datetimes.DatetimeIndex'>\n",
-      "DatetimeIndex(['2015-11-01 03:00:00', '2015-11-01 04:00:00',\n",
-      "               '2015-11-01 05:00:00', '2015-11-01 06:00:00',\n",
-      "               '2015-11-01 07:00:00'],\n",
+      "Global time indices over 1216 hours:  type <class 'pandas.core.indexes.datetimes.DatetimeIndex'>\n",
+      "DatetimeIndex(['2015-11-01 01:00:00', '2015-11-01 02:00:00',\n",
+      "               '2015-11-01 03:00:00', '2015-11-01 04:00:00',\n",
+      "               '2015-11-01 05:00:00'],\n",
       "              dtype='datetime64[ns]', freq='H')\n",
       "Dropping rows not in global index from hourly data to save memory\n",
-      "Reduced hourly data size to 0.23 percent of original\n",
+      "Reduced hourly data size to 0.03 percent of original\n",
       "Computing normalization means and variances for all hourly features\n",
       "Computing mean and variance over all sample IDs\n",
       "Overall feature means:\n",
-      "LAPS2             63.584937\n",
-      "IMAR_IM_GROUP      0.160031\n",
-      "IMAR_INH_GROUP     0.091241\n",
-      "IMAR_IVD_GROUP     0.084052\n",
-      "IMAR_IVR_GROUP     0.493033\n",
-      "IMAR_MSC_GROUP     0.038929\n",
-      "IMAR_OR_GROUP      0.690998\n",
-      "OT_A_GROUP         0.099204\n",
-      "OT_B_GROUP         0.004424\n",
-      "OT_D_GROUP         0.040920\n",
-      "OT_I_GROUP         0.031188\n",
-      "OT_L_GROUP         0.332227\n",
-      "OT_N_GROUP         0.345831\n",
+      "LAPS2             63.269854\n",
+      "IMAR_IM_GROUP      0.141358\n",
+      "IMAR_INH_GROUP     0.063157\n",
+      "IMAR_IVD_GROUP     0.091676\n",
+      "IMAR_IVR_GROUP     0.512061\n",
+      "IMAR_MSC_GROUP     0.044365\n",
+      "IMAR_OR_GROUP      0.668557\n",
+      "OT_A_GROUP         0.114242\n",
+      "OT_B_GROUP         0.006649\n",
+      "OT_D_GROUP         0.049705\n",
+      "OT_I_GROUP         0.031502\n",
+      "OT_L_GROUP         0.360729\n",
+      "OT_N_GROUP         0.428944\n",
       "dtype: float64\n",
       "Overall feature variances:\n",
-      "LAPS2             581.182042\n",
-      "IMAR_IM_GROUP       0.191837\n",
-      "IMAR_INH_GROUP      0.143980\n",
-      "IMAR_IVD_GROUP      0.109069\n",
-      "IMAR_IVR_GROUP      1.077114\n",
-      "IMAR_MSC_GROUP      0.070268\n",
-      "IMAR_OR_GROUP       2.886814\n",
-      "OT_A_GROUP          0.253274\n",
-      "OT_B_GROUP          0.011931\n",
-      "OT_D_GROUP          0.048478\n",
-      "OT_I_GROUP          0.043501\n",
-      "OT_L_GROUP          1.376010\n",
-      "OT_N_GROUP          4.094319\n",
+      "LAPS2             569.219409\n",
+      "IMAR_IM_GROUP       0.175389\n",
+      "IMAR_INH_GROUP      0.092801\n",
+      "IMAR_IVD_GROUP      0.126620\n",
+      "IMAR_IVR_GROUP      1.236719\n",
+      "IMAR_MSC_GROUP      0.068743\n",
+      "IMAR_OR_GROUP       2.730160\n",
+      "OT_A_GROUP          0.305738\n",
+      "OT_B_GROUP          0.013977\n",
+      "OT_D_GROUP          0.059510\n",
+      "OT_I_GROUP          0.046370\n",
+      "OT_L_GROUP          1.764407\n",
+      "OT_N_GROUP          5.780935\n",
       "dtype: float64\n",
       "Normalizing by overall mean/var for all sample IDs\n",
       "Hourly feature normalization complete!\n",
       "Pre-building all patient locations in global time index\n",
-      "All possible locations:  ['TCU' 'WARD' 'PAR' 'OR' 'ICU']\n",
+      "All possible locations:  ['WARD' 'PAR' 'OR' 'TCU' 'ICU']\n",
       "Pre-building all patient associations\n",
-      "Finished building patient associations:  shape (100, 100)\n",
-      "Average of 79.78+/-23.27 associations per sample\n",
+      "Finished building patient associations:  shape (1000, 1000)\n",
+      "Average of 702.024+/-242.85 associations per sample\n",
       "Required length 0 hours, did not subset the dataset by hourly length\n",
       "Pre-computing binary class balances from LoS with threshold of 1.0\n",
-      "All classification targets (masked & flattened):  (6063,)\n",
-      "Mean Length of Stay (shape (100, 1)):  3.67+/-3.91, min 0.21, max 22.66\n",
-      "Mean Remaining Length of Stay (shape (6063,)):  3.39+/-4.25, min 0.00, max 22.66\n",
-      "Class balances:  [0.30331519 0.69668481]\n",
-      "train split:  100 samples:\n",
+      "All classification targets (masked & flattened):  (57845,)\n",
+      "Mean Length of Stay (shape (1000, 1)):  3.46+/-4.25, min 0.07, max 48.98\n",
+      "Mean Remaining Length of Stay (shape (57845,)):  3.28+/-4.85, min 0.00, max 48.98\n",
+      "Class balances:  [0.31916328 0.68083672]\n",
+      "train split:  1000 samples:\n",
       "[316197799432, 312216208287, 312216208725]\n",
       "X: None\n",
-      "Y: (100, 1)\n",
-      "LoS values:  (100, 1):  mean 3.67 +/- 3.91\n",
+      "Y: (1000, 1)\n",
+      "LoS values:  (1000, 1):  mean 3.46 +/- 4.25\n",
       "\n",
       "Building dataset for val split\n",
       "Pre-loading all cohort features\n",
-      "Loaded cohort data:  (100, 5)\n",
-      "               LOS  ADM_LAPS2  ADM_COPS2 SEX  AGE\n",
-      "ENCOUNTER_ID                                     \n",
-      "318204972034  1.01         16          6   F   58\n",
-      "318207164421  1.49         73        120   F   80\n",
-      "314256991749  2.76         64         75   F   93\n",
-      "314256745993  0.37        115        160   M   75\n",
-      "318207166477  1.27        183         48   M   69\n",
+      "Loaded cohort data:  (1000, 5)\n",
+      "                LOS  ADM_LAPS2  ADM_COPS2 SEX  AGE\n",
+      "ENCOUNTER_ID                                      \n",
+      "314257289216   0.26         56         11   F   66\n",
+      "314256969729   1.67        102         70   F   76\n",
+      "318207672322   1.69         16         42   M   53\n",
+      "314253352963   1.07         16         22   M   66\n",
+      "318207518724  11.11        152         45   M   69\n",
       "Pre-loading all hourly features\n",
-      "Global time indices over 369 hours:  type <class 'pandas.core.indexes.datetimes.DatetimeIndex'>\n",
+      "Global time indices over 1787 hours:  type <class 'pandas.core.indexes.datetimes.DatetimeIndex'>\n",
       "DatetimeIndex(['2017-12-11 03:00:00', '2017-12-11 04:00:00',\n",
       "               '2017-12-11 05:00:00', '2017-12-11 06:00:00',\n",
       "               '2017-12-11 07:00:00'],\n",
       "              dtype='datetime64[ns]', freq='H')\n",
       "Dropping rows not in global index from hourly data to save memory\n",
-      "Reduced hourly data size to 0.62 percent of original\n",
+      "Reduced hourly data size to 0.12 percent of original\n",
       "Normalizing by overall mean/var for all sample IDs\n",
       "Hourly feature normalization complete!\n",
       "Pre-building all patient locations in global time index\n",
-      "All possible locations:  ['OR' 'WARD' 'ICU' 'PAR']\n",
+      "All possible locations:  ['ICU' 'WARD' 'OR' 'PAR' 'TCU']\n",
       "Pre-building all patient associations\n",
-      "Finished building patient associations:  shape (100, 100)\n",
-      "Average of 61.38+/-22.92 associations per sample\n",
+      "Finished building patient associations:  shape (1000, 1000)\n",
+      "Average of 345.31+/-192.89 associations per sample\n",
       "Required length 0 hours, did not subset the dataset by hourly length\n",
       "Pre-computing binary class balances from LoS with threshold of 1.0\n",
-      "All classification targets (masked & flattened):  (4747,)\n",
-      "Mean Length of Stay (shape (100, 1)):  2.18+/-1.82, min 0.34, max 12.73\n",
-      "Mean Remaining Length of Stay (shape (4747,)):  1.75+/-1.97, min 0.00, max 12.73\n",
-      "Class balances:  [0.44512324 0.55487676]\n",
-      "val split:  100 samples:\n",
+      "All classification targets (masked & flattened):  (54719,)\n",
+      "Mean Length of Stay (shape (1000, 1)):  3.45+/-4.79, min 0.15, max 64.83\n",
+      "Mean Remaining Length of Stay (shape (54719,)):  3.58+/-5.62, min 0.00, max 64.83\n",
+      "Class balances:  [0.32306877 0.67693123]\n",
+      "val split:  1000 samples:\n",
       "[318207185496, 318207164756, 318207165638]\n",
       "X: None\n",
-      "Y: (100, 1)\n",
-      "LoS values:  (100, 1):  mean 2.18 +/- 1.82\n",
+      "Y: (1000, 1)\n",
+      "LoS values:  (1000, 1):  mean 3.45 +/- 4.79\n",
       "\n",
       "Datasets defined!\n"
      ]
@@ -579,48 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'cpu'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.device"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NeuralNetRegressor' object has no attribute 'parameters'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-888a528e7881>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_cuda\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NeuralNetRegressor' object has no attribute 'parameters'"
-     ]
-    }
-   ],
-   "source": [
-    "next(model.parameters()).is_cuda"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -629,6 +580,25 @@
      "text": [
       "Model defined!\n",
       "Fitting model...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  epoch    train_loss    valid_loss        dur\n",
+      "-------  ------------  ------------  ---------\n",
+      "      1        \u001b[36m0.3110\u001b[0m        \u001b[32m0.2537\u001b[0m  2874.0247\n",
+      "  epoch    train_loss    valid_loss        dur\n",
+      "-------  ------------  ------------  ---------\n",
+      "      1        \u001b[36m0.3110\u001b[0m        \u001b[32m0.2537\u001b[0m  2874.0247\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fit complete!\n"
      ]
     }
    ],
@@ -664,6 +634,7 @@
     "    iterator_train__shuffle=True,\n",
     "    verbose=1,\n",
     "    warm_start=True,\n",
+    "#     device = torch.device(0)\n",
     ")\n",
     "\n",
     "model = net\n",
